# miscanthus_ai

./: .gitignore  CMakeLists.txt  LICENSE  README.md  camera_params.json  cropped_pointcloud_aabb.pcd  epoch_loss.csv  epoch_loss_backup.csv  nerf_checkpoint.pth  nerf_checkpoint_epoch_499.pth  package.xml
config/: realsense_pointcloud.rviz
launch/: move_viper.launch  realsense.launch
scripts/: arbit_to_utm.py  cleaned_pointcloud.pcd  crop_pointcloud.py  enhance_pointcloud.py  filtered_pointcloud.pcd  hunter_viper_nerf_data_collection.py  img_to_vid.py  improved_pointcloud.pcd  mask_pointcloud.py  meta_SAM.py  move_viper.py  move_viper_arc.py  move_viper_arc2.py  move_viper_arc3.py  move_viper_arc4.py  move_viper_arc5_linseed.py  obstruction_artifact.py  pointcloud_crop_vis.py  pointcloud_merger.py  pointcloud_publisher.py  pointcloud_subscriber.py  pointcloud_visualiser.py  pointcloud_visualiser_dual.py  ray_tracing.py  save_pointcloud.py  test.py  viper_moveit_class.py
scripts/NeRF/: cam_param_saver.py  data_loader.py  estimate_near_far.py  nerf_model.py  plot_full_camera_poses.py  test.py  test_nerf.py  test_nerf_3D.py  train_nerf.py
srv/: SavePointCloud.srv
