<?xml version="1.0"?>
<package format="2">
  <name>viper_ros</name>
  <version>0.0.0</version>
  <description>The viper_ros package</description>

  <maintainer email="kiyanoush@todo.todo">kiyanoush</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moveit_commander</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>realsense2_camera</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>moveit_commander</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>interbotix_xsarm_moveit_interface</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
